testing/macro-tests/tests/ui/generated_default_conflict.stderr
error: generated(insert = ...) cannot be combined with default = ...; default is a database/schema default
  --> tests/ui/generated_default_conflict.rs:23:21
   |
23 |             ident = "created_on_insert",
   |                     ^^^^^^^^^^^^^^^^^^^
